bindings/java/src/main/java/whiteout/host/internal/Native.java

// SPDX-License-Identifier: BSD-3-Clause
// AUTOGENERATED by tools/codegen/emit_java.py - do not edit.
package whiteout.host.internal;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import whiteout.common.internal.NativeCommon;

/** FFM MethodHandle registry for this module. Internal — for codegen use. */
public final class Native {
    private Native() {}

    public static final MemoryLayout BYTES_LAYOUT = NativeCommon.BYTES_LAYOUT;
    public static final MemoryLayout CSTRING_LAYOUT = NativeCommon.CSTRING_LAYOUT;
    public static final MethodHandle whiteout_Bytes_free = NativeCommon.whiteout_Bytes_free;
    public static final MethodHandle whiteout_CString_free = NativeCommon.whiteout_CString_free;

    static MethodHandle find(String name, FunctionDescriptor fd) {
        return NativeCommon.find(name, fd);
    }

    // -- WorkerPool --
    public static final MethodHandle whiteout_host_WorkerPool_delete = find(
        "whiteout_host_WorkerPool_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_WorkerPool_waitIdle = find(
        "whiteout_host_WorkerPool_waitIdle", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_WorkerPool_threadCount = find(
        "whiteout_host_WorkerPool_threadCount", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

    // -- CascFileSystem --
    public static final MethodHandle whiteout_host_CascFileSystem_delete = find(
        "whiteout_host_CascFileSystem_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_CascFileSystem_readFile = find(
        "whiteout_host_CascFileSystem_readFile", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_host_CascFileSystem_reserveFileId = find(
        "whiteout_host_CascFileSystem_reserveFileId", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_CascFileSystem_writeFile = find(
        "whiteout_host_CascFileSystem_writeFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_host_CascFileSystem_fileExists = find(
        "whiteout_host_CascFileSystem_fileExists", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- VirtualPathFileSystem --
    public static final MethodHandle whiteout_host_VirtualPathFileSystem_delete = find(
        "whiteout_host_VirtualPathFileSystem_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_VirtualPathFileSystem_readFile = find(
        "whiteout_host_VirtualPathFileSystem_readFile", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_VirtualPathFileSystem_writeFile = find(
        "whiteout_host_VirtualPathFileSystem_writeFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_host_VirtualPathFileSystem_fileExists = find(
        "whiteout_host_VirtualPathFileSystem_fileExists", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- HttpResponse --
    public static final MethodHandle whiteout_host_HttpResponse_new = find(
        "whiteout_host_HttpResponse_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_HttpResponse_delete = find(
        "whiteout_host_HttpResponse_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_HttpResponse_get_statusCode = find("whiteout_host_HttpResponse_get_statusCode", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_HttpResponse_set_statusCode = find("whiteout_host_HttpResponse_set_statusCode", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_host_HttpResponse_get_body_count = find("whiteout_host_HttpResponse_get_body_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_HttpResponse_resize_body = find("whiteout_host_HttpResponse_resize_body", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_host_HttpResponse_get_body_data = find("whiteout_host_HttpResponse_get_body_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_HttpResponse_assign_body = find("whiteout_host_HttpResponse_assign_body", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_host_HttpResponse_get_error = find("whiteout_host_HttpResponse_get_error", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_HttpResponse_set_error = find("whiteout_host_HttpResponse_set_error", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- HttpHandler --
    public static final MethodHandle whiteout_host_HttpHandler_delete = find(
        "whiteout_host_HttpHandler_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_HttpHandler_capabilities = find(
        "whiteout_host_HttpHandler_capabilities", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- OsFileSystem --
    public static final MethodHandle whiteout_host_OsFileSystem_new_rootPath = find(
        "whiteout_host_OsFileSystem_new_rootPath", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_OsFileSystem_delete = find(
        "whiteout_host_OsFileSystem_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_OsFileSystem_readFile = find(
        "whiteout_host_OsFileSystem_readFile", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_OsFileSystem_writeFile = find(
        "whiteout_host_OsFileSystem_writeFile", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_host_OsFileSystem_fileExists = find(
        "whiteout_host_OsFileSystem_fileExists", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- SimpleThreadPool --
    public static final MethodHandle whiteout_host_SimpleThreadPool_new_nThreads = find(
        "whiteout_host_SimpleThreadPool_new_nThreads", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_host_SimpleThreadPool_delete = find(
        "whiteout_host_SimpleThreadPool_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_SimpleThreadPool_waitIdle = find(
        "whiteout_host_SimpleThreadPool_waitIdle", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_SimpleThreadPool_threadCount = find(
        "whiteout_host_SimpleThreadPool_threadCount", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

    // -- SimpleHttpHandler --
    public static final MethodHandle whiteout_host_SimpleHttpHandler_new = find(
        "whiteout_host_SimpleHttpHandler_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_SimpleHttpHandler_new_nThreads = find(
        "whiteout_host_SimpleHttpHandler_new_nThreads", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_host_SimpleHttpHandler_delete = find(
        "whiteout_host_SimpleHttpHandler_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_SimpleHttpHandler_capabilities = find(
        "whiteout_host_SimpleHttpHandler_capabilities", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- JobGroup --
    public static final MethodHandle whiteout_host_JobGroup_new = find(
        "whiteout_host_JobGroup_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_JobGroup_delete = find(
        "whiteout_host_JobGroup_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_JobGroup_add = find(
        "whiteout_host_JobGroup_add", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_host_JobGroup_done = find(
        "whiteout_host_JobGroup_done", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_JobGroup_await = find(
        "whiteout_host_JobGroup_await", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_JobGroup_isReady = find(
        "whiteout_host_JobGroup_isReady", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- BlizzardGameInfo --
    public static final MethodHandle whiteout_host_BlizzardGameInfo_new = find(
        "whiteout_host_BlizzardGameInfo_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameInfo_delete = find(
        "whiteout_host_BlizzardGameInfo_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameInfo_get_game = find("whiteout_host_BlizzardGameInfo_get_game", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameInfo_set_game = find("whiteout_host_BlizzardGameInfo_set_game", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_host_BlizzardGameInfo_get_name = find("whiteout_host_BlizzardGameInfo_get_name", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameInfo_set_name = find("whiteout_host_BlizzardGameInfo_set_name", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameInfo_get_path = find("whiteout_host_BlizzardGameInfo_get_path", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameInfo_set_path = find("whiteout_host_BlizzardGameInfo_set_path", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- BlizzardGameInfoList --
    public static final MethodHandle whiteout_host_BlizzardGameInfoList_delete = find(
        "whiteout_host_BlizzardGameInfoList_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameInfoList_size = find(
        "whiteout_host_BlizzardGameInfoList_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameInfoList_at = find(
        "whiteout_host_BlizzardGameInfoList_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- BlizzardGameFinder --
    public static final MethodHandle whiteout_host_BlizzardGameFinder_delete = find(
        "whiteout_host_BlizzardGameFinder_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameFinder_findAll = find(
        "whiteout_host_BlizzardGameFinder_findAll", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameFinder_fromName = find(
        "whiteout_host_BlizzardGameFinder_fromName", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_host_BlizzardGameFinder_toName = find(
        "whiteout_host_BlizzardGameFinder_toName", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.JAVA_INT));

}
